<?xml version="1.0"?>
<package format="2">
  <name>navigation_client</name>
  <version>0.0.1</version>
  <description>Client for sending NavigateToPose action goal</description>
  <maintainer email="samiksha@example.com">Samiksha Unhale</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>p2p_navigation_interfaces</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>ament_cmake</exec_depend>
</package>
