<package format="3">
  <name>p2p_navigation</name>
  <version>0.0.1</version>
  <description>P2P navigation using Behavior Trees</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav2_msgs</depend>
  <depend>behaviortree_cpp</depend>
</package>
